update contracts for new pools
